# claude-multi-account

./: .gitattributes  .gitignore  LICENSE  README.md  claude-dalvoy.bat  claude-ghackk.bat  claude-gp.bat  claude-menu.bat  claude-menu.ps1  claude-zf.bat  future.md  install.ps1  install.sh  package.json  pyproject.toml  release.sh
docs/: installation.md  usage.md
marketing/: capture.sh  demo-script.sh  generate-extra.py  generate-screenshots.py  posts.md  posts.txt
multi_claude/: __init__.py  cli.py
unix/: claude-menu.sh  install.sh
windows/: claude-menu.bat  claude-menu.ps1
